# wasi-apigateway

examples/greet-wasimodule/: Cargo.toml
examples/greet-wasimodule/src/: http.rs  lib.rs
src/WasiApiGateway/: Program.cs  Startup.cs  WasiApiGateway.csproj
src/WasiApiGateway/Application/: ApiHandlers.cs  Request.cs  WasiModulesRunner.cs
src/WasiApiGateway/Controllers/: ApiHandlersController.cs
src/WasiApiGateway/Extensions/: AspNetCoreHttpExtensions.cs  StreamExtensions.cs
src/WasiApiGateway/JsonConverters/: ByteArrayConverter.cs
src/WasiApiGateway/Properties/: launchSettings.json
